js/src/jit-test/tests/binast/invalid/identifier-catch.binjs
BINJS
[
GRAMMAR
]
identity
;
+
AssertedBlockScope
Block
"
AssertedBoundName
.
AssertedBoundNamesScope2AssertedScriptGlobalScope
"
BindingIdentifier
CatchClause
Script
"
TryCatchStatement
[
STRINGS
]
identity
;
1
e
[
TREE
]
identity
;
4
